# meson-cmake-wrapper-clion-test

./: meson.build
include/: a.h  b.h
src/: a.c  b.c  meson.build
